# swerve_sim

./: .gitignore  CMakeLists.txt  Taskfile.yaml  setup.sh  test.cc  test.world
models/: swerve.blend
models/swerve_robot/: model.config  model.sdf  swerve_body.blend  swerve_body.mtl  swerve_wheel.blend  swerve_wheel.mtl
models/swerve_wheel/: model.config
